# paper-forensics

./: .gitignore  CHANGELOG.md  LICENSE  Open Paper Forensics.cmd  README.md  ai-detector.code-workspace  launch_paper_forensics.pyw  pyproject.toml
examples/corpus/: boilerplate_note.txt  similar_paper.txt
examples/sample_tex_project/: main.tex
examples/sample_tex_project/sections/: introduction.tex  methods.tex
outputs/sample_run/: audit.csv  audit.json  report.html
src/paper_forensics/: __init__.py  app_server.py  audit.py  cli.py  config.py
src/paper_forensics/ai_rhetoric/: __init__.py  classifier.py  perplexity.py  phrase_rules.py  score.py  style_shift.py
src/paper_forensics/data/: ai_phrase_lexicon.json
src/paper_forensics/ingest/: __init__.py  bib_parser.py  latex_clean.py  normalize.py  tex_project.py
src/paper_forensics/nlp/: __init__.py  sentence_split.py  token_features.py
src/paper_forensics/plagiarism/: __init__.py  boilerplate.py  corpus_index.py  lexical_overlap.py  score.py  semantic_match.py
src/paper_forensics/report/: csv_export.py  html_report.py  json_export.py  review_payload.py
src/paper_forensics/report/assets/: review_app.css  review_app.js
src/paper_forensics/report/templates/: review.html
src/paper_forensics/scoring/: aggregate.py  calibrate.py  schemas.py
tests/: test_ai_rhetoric_score.py  test_app_server.py  test_end_to_end.py  test_plagiarism_score.py  test_review_payload.py  test_sentence_split.py  test_tex_ingest.py
